2008-01-12  Martin Lambers <marlam@marlam.de>

	* src/tonemap_selector.h, src/tonemap_selector.cpp, src/view_area.cpp,
	NEWS: Rename tumblinrushmeier99 to tumblin99, as in CVL.

2008-01-10  Martin Lambers <marlam@marlam.de>

	* NEWS: Update.
	* doc/cvltonemap.1, doc/cvltonemap.texi: Update.
	* src/main.cpp, src/cvltonemap.cpp: Update copyright year in --version
	output and AboutBox.

2008-01-09  Martin Lambers <marlam@marlam.de>

	* configure.ac, src/tonemap_selector.h, src/tonemap_selector.cpp,
	src/view_area.cpp: Add support for the new schlick94 and
	tumblinrushmeier99 tonemap methods in CVL 0.2.3.
	* configure.ac, doc/cvltonemap.1, doc/cvltonemap.texi: Bump version to
	0.2.0.
	* README: Update.

2007-12-08  Martin Lambers <marlam@marlam.de>

	* configure.ac, doc/cvltonemap.1, doc/cvltonemap.texi: Bump version to
	0.1.2.

2007-12-06  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Add MH_STDIN, MH_STDOUT.
	* src/cvltonemap.cpp: Show filename in window title.

2007-11-08  Martin Lambers <marlam@marlam.de>

	* src/conf.cpp: Save doubles with enough precision.

2007-10-28  Martin Lambers <marlam@marlam.de>

	* doc/cvltonemap.texi: Fix filename of info file.

2007-10-16  Martin Lambers <marlam@marlam.de>

	* src/cvltonemap.cpp: Print CVL version in AboutBox.
	* configure.ac: Require CVL >= 0.2.2.

2007-10-09  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h, mhlib/mh_os.c, src/main.cpp: Rename DIRSEP to
	MH_DIRSEP. Update the users accordingly.

2007-09-13  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Skip postprocessing if it is not necessary.

2007-09-09  Martin Lambers <marlam@marlam.de>

	* configure.ac: Remove unused --debug option for configure script.
	* configure.ac, doc/cvlview.texi, doc/cvlview.1: Bump version numbers
        and dates for 0.1.1.
	* NEWS: Update for 0.1.1.
	* doc/Makefile.am: Distribute man page.

2007-09-05  Martin Lambers <marlam@marlam.de>

	* Force initializeGL() in constructor. This prevents potential